--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,9 @@ dependencies {
 dependencies {
     compile 'com.android.support:design:23.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:23.+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:23.+'
+}
