--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <permission
         android:name="com.parse.starter.permission.C2D_MESSAGE"
@@ -53,9 +55,6 @@
             </intent-filter>
         </receiver>
 
-        <activity
-            android:name=".ProfileActivity"
-            android:label="@string/title_activity_welcome" />
         <activity
             android:name=".SignUpActivity"
             android:label="@string/title_activity_signup" />
