--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <permission
         android:name="com.parse.starter.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="in.rakhtsavelives.app.permission.C2D_MESSAGE" />
 
     <application
@@ -22,6 +24,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.parse.push.notification_icon"
+            android:resource="@drawable/icon_notification_16" />
+
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,9 +38,9 @@
         <activity android:name=".LoginActivity" />
 
         <service android:name="com.parse.PushService" />
-
+        <!-- android:name="com.parse.ParsePushBroadcastReceiver" -->
         <receiver
-            android:name="com.parse.ParsePushBroadcastReceiver"
+            android:name=".PushNotificationManager"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
@@ -59,7 +65,13 @@
         <activity
             android:name=".MedicalDetailsActivity"
             android:label="Medical Details" />
-        <activity android:name=".TabActivity" android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".TabActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".NotificationActivity"
+            android:launchMode="singleInstance"
+            android:excludeFromRecents="true"
+            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"/>
     </application>
 
 </manifest>
