--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,9 @@ dependencies {
 dependencies {
     compile 'com.android.support:support-v4:23.+'
 }
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:design:23.+'
+    compile 'com.github.clans:fab:1.6.1'
+}
