--- a/build.gradle
+++ b/build.gradle
@@ -21,30 +21,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-}
-dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
-}
-dependencies {
     compile 'com.android.support:design:23.+'
-}
-dependencies {
-    compile 'com.android.support:design:23.+'
-}
-dependencies {
-    compile 'com.android.support:design:23.+'
-}
-dependencies {
     compile 'com.android.support:support-v4:23.+'
-}
-dependencies {
-    compile 'com.android.support:support-v4:23.+'
-}
-dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:design:23.+'
     compile 'com.github.clans:fab:1.6.1'
+    compile 'com.github.amlcurran.showcaseview:library:5.3.0'
 }
