--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.github.clans:fab:1.6.1'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
     compile 'com.github.amlcurran.showcaseview:library:5.3.0'
+    compile 'com.github.paolorotolo:appintro:3.3.0'
 }
