--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <permission
         android:name="com.parse.starter.permission.C2D_MESSAGE"
@@ -25,7 +25,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.parse.push.notification_icon"
@@ -39,7 +40,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".TutorialActivity"/>
+        <activity android:name=".TutorialActivity" />
+
         <service android:name="com.parse.PushService" />
         <!-- android:name="com.parse.ParsePushBroadcastReceiver" -->
         <receiver
@@ -66,7 +68,7 @@
             android:name=".SignUpActivity"
             android:label="@string/title_activity_signup" />
         <activity
-            android:name=".MedicalDetailsActivity"
+            android:name=".MedicalDetailsActivityQue1"
             android:label="Medical Details" />
         <activity
             android:name=".TabActivity"
@@ -74,7 +76,8 @@
         <activity
             android:name=".NotificationActivity"
             android:launchMode="singleInstance" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".MedicalDetailsActivityQue2"></activity>
     </application>
 
 </manifest>
