--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
-    compile 'com.android.support:design:23.+'
-    compile 'com.android.support:support-v4:23.+'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.github.clans:fab:1.6.1'
-    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'com.github.amlcurran.showcaseview:library:5.3.0'
     compile 'com.github.paolorotolo:appintro:3.3.0'
 }
