--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -77,7 +77,11 @@
             android:name=".NotificationActivity"
             android:launchMode="singleInstance" />
         <activity android:name=".SearchActivity" />
-        <activity android:name=".MedicalDetailsActivityQue2"></activity>
+        <activity android:name=".MedicalDetailsActivityQue2" />
+        <activity android:name=".MedicalDetailsActivityQue3" />
+        <activity android:name=".MedicalDetailsActivityQue4" />
+        <activity android:name=".FAQActivity" />
+        <activity android:name=".AboutUsActivity"></activity>
     </application>
 
 </manifest>
