--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.github.clans:fab:1.6.1'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
-    compile 'com.github.amlcurran.showcaseview:library:5.3.0'
     compile 'com.github.paolorotolo:appintro:3.3.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
 }
